Central column of owners dashboard implemented